# python-patch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REFACTORING_SUMMARY.md  measure_coverage.py  mkdocs.yml  patch.py  patch_new.py  pyproject.toml  run_pytest_tests.py  test_backward_compatibility.py  test_coverage_report.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  index.md  introduction.md
docs/about/: changelog.md  credits.md  license.md
docs/api/: api.md  application.md  cli.md  core.md  index.md  parser.md  utils.md
docs/development/: contributing.md  release.md  setup.md  testing.md
docs/examples/: advanced.md  basic.md  integration.md
docs/getting-started/: basic-usage.md  installation.md  quick-start.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/user-guide/: advanced.md  api.md  cli.md  error-handling.md
src/: __init__.py
src/patch/: __init__.py  api.py  application.py  cli.py  compat.py  constants.py  core.py  logging_utils.py  parser.py  utils.py
tests/: run_tests.py
tests/06nested/[result]/examples/: font_comparison.py
tests/06nested/[result]/experimental/: console.py
tests/06nested/[result]/pyglet/font/: win32.py
tests/06nested/[result]/tests/app/: EVENT_LOOP.py
tests/06nested/[result]/tests/font/: SYSTEM.py
tests/06nested/examples/: font_comparison.py
tests/06nested/experimental/: console.py
tests/06nested/pyglet/font/: win32.py
tests/06nested/tests/app/: EVENT_LOOP.py
tests/06nested/tests/font/: SYSTEM.py
tests_pytest/: conftest.py  pytest.ini  test_api.py  test_application.py  test_cli.py  test_compat.py  test_core.py  test_coverage_boost.py  test_integration.py  test_logging_utils.py  test_parser.py  test_utils.py
